--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ project(Llanguage)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(llang src/main.cpp src/misc.cpp)
+add_executable(llang 
+                        src/main.cpp 
+                        src/misc.cpp 
+                        src/codegen.cpp)
