--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(llang 
-                        src/main.cpp 
-                        src/misc.cpp 
-                        src/codegen.cpp)
+               src/main.cpp 
+               src/misc.cpp
+               src/CodeGenerator.cpp)
